--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,7 +5,18 @@
   text-align: center;
 }
 
-.logo {
+.project-container {
+  text-align: center;
+  margin-bottom: 20px; /* Adjust the margin as needed */
+}
+
+.project-image {
+  max-width: 30%; /* Ensure the image does not exceed its container width */
+  max-height: 30%;
+  height: auto; /* Maintain the aspect ratio of the image */
+  cursor: pointer; /* Add pointer cursor to indicate the image is clickable */
+}
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -39,4 +50,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
